<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"

>

    <!-- Top Bar -->
    <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_new_activity"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

    </RelativeLayout>

    <!-- White Box Content -->
    <LinearLayout
            android:id="@+id/box"
            android:layout_width="324dp"
            android:layout_height="500dp"
            android:layout_below="@id/topBar"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_background"
            android:elevation="8dp"
            android:padding="10dp" android:layout_marginTop="0dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="150dp">

        <ImageView
                android:id="@+id/image_uploaded"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/upload_image_icon"
        />

        <EditText
                android:id="@+id/edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"/>

        <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"/>
        <EditText
                android:id="@+id/User_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_location"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/baseline_add_location_alt_24"
        />
        <TextView
                android:id="@+id/Show_date_time"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:textSize="15dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        <Button
                android:id="@+id/Button_date_time"
                android:layout_marginTop="4dp"

                android:text="@string/date_and_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/GenreLabel"
                    android:layout_width="wrap_content"
                    android:text="@string/choose_genre"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"/>
            <Spinner
                    android:id="@+id/mySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/GenreLabel"
                    android:background="#FFFFFF"
                    android:layout_marginTop="3.9dp"/>

        </RelativeLayout>





    </LinearLayout>

    <Button
            android:id="@+id/btnSaveNote"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:text="@string/save_activity"
            android:layout_centerHorizontal="true"


            android:layout_alignParentBottom="true" android:layout_marginBottom="95dp"/>
    <!-- Bottom Navigation View at the bottom -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_navmenu"
            android:background="@color/very_light_gray"
            app:itemIconTint="@color/slightly_light_gray"
    >

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>
