<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".Login"
>
    <LinearLayout
            android:id="@+id/box"
            android:layout_width="324dp"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_background"
            android:elevation="8dp"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:text="@string/login"
                android:textSize="20pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <Button
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

        <TextView
                android:id="@+id/RegisterNow"
                android:textSize="10pt"
                android:gravity="center"
                android:layout_marginTop="20pt"
                android:text="Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
        />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>






